# Embedded_Systems_Linux_ITI_9-Months

./: .gitattributes  .gitignore  README.md
Embedded_ARM_Drivers/: README.md
Embedded_ARM_Drivers/COTS/Components/MCAL/RCC/: CMakeLists.txt
Embedded_ARM_Drivers/COTS/Components/MCAL/RCC/inc/: RCC.h
Embedded_ARM_Drivers/COTS/Components/MCAL/RCC/src/: RCC.c
Embedded_ARM_Drivers/COTS/Components/common/inc/: STD_TYPES.h
Embedded_AVR_Drivers/: .gitattributes  .gitignore  README.md
Embedded_AVR_Drivers/COTS/APP/Lab1/: CMakeLists.txt  main.c
Embedded_AVR_Drivers/COTS/APP/Lab2/: CMakeLists.txt
Embedded_AVR_Drivers/COTS/APP/Lab2/src/: main.c
Embedded_AVR_Drivers/COTS/APP/Lab3/: CMakeLists.txt
Embedded_AVR_Drivers/COTS/APP/Lab3/src/: main.c
Embedded_AVR_Drivers/COTS/APP/Lab4/: CMakeLists.txt
Embedded_AVR_Drivers/COTS/APP/Lab4/src/: main.c
Embedded_AVR_Drivers/COTS/APP/Lab5/: CMakeLists.txt
Embedded_AVR_Drivers/COTS/APP/Lab5/src/: main.c
Embedded_AVR_Drivers/COTS/APP/Lab6/: CMakeLists.txt
Embedded_AVR_Drivers/COTS/APP/Lab6/src/: main.c
Embedded_AVR_Drivers/COTS/Components/HAL/HLED/: CMakeLists.txt
Embedded_AVR_Drivers/COTS/Components/HAL/HLED/inc/: HLED.h  HLED_cfg.h
Embedded_AVR_Drivers/COTS/Components/HAL/HLED/src/: HLED.c  HLED_cfg.c
Embedded_AVR_Drivers/COTS/Components/HAL/HSEVEN_SEG/: CMakeLists.txt
Embedded_AVR_Drivers/COTS/Components/HAL/HSEVEN_SEG/inc/: HSEVEN_SEG.h  HSEVEN_SEG_cfg.h
Embedded_AVR_Drivers/COTS/Components/HAL/HSEVEN_SEG/src/: HSEVEN_SEG.c  HSEVEN_SEG_cfg.c
Embedded_AVR_Drivers/COTS/Components/HAL/HSWITCH/: CMakeLists.txt
Embedded_AVR_Drivers/COTS/Components/HAL/HSWITCH/inc/: HSWITCH.h  HSWITCH_cfg.h
Embedded_AVR_Drivers/COTS/Components/HAL/HSWITCH/src/: HSWITCH.c  HSWITCH_cfg.c
Embedded_AVR_Drivers/COTS/Components/MCAL/MDIO/: CMakeLists.txt  sad.txt  temp.txt
Embedded_AVR_Drivers/COTS/Components/MCAL/MDIO/inc/: MDIO.h  MDIO_cfg.h
Embedded_AVR_Drivers/COTS/Components/MCAL/MDIO/src/: MDIO.c  MDIO_cfg.c
Embedded_AVR_Drivers/COTS/Components/MCAL/MPORT/: CMakeLists.txt
Embedded_AVR_Drivers/COTS/Components/MCAL/MPORT/inc/: MPORT.h  MPORT_cfg.h
Embedded_AVR_Drivers/COTS/Components/MCAL/MPORT/src/: MPORT.c  MPORT_cfg.c
Embedded_AVR_Drivers/COTS/Components/common/inc/: BIT_MATH.h
Embedded_Linux_Kitchen/: .gitignore  README.md  cmds_hist_20-1.txt  format-sdcard.sh
Embedded_Linux_Kitchen/Task1_Cross_Toolchain-ng_Test/: main.c
Embedded_Linux_Kitchen/Task2_Qemu_RPI_Uboot/: rpi_uboot.webm
Embedded_Linux_Kitchen/Task3_RPI_BareMetal_LED/: GPIO.h  README.md  linkerScript.ld  main.c  startup.S
Embedded_Linux_Kitchen/Task4_Building_Kernel_Image_Script_Uboot_env/env_var_scripts_rpi/: uboot.env
Embedded_Linux_Kitchen/Task4_Building_Kernel_Image_Script_Uboot_env/qemu_boot/: env.txt  gpio  zImage
Embedded_Linux_Kitchen/Task4_Building_Kernel_Image_Script_Uboot_env/rpi_boot/: gpio.img
Embedded_Linux_Kitchen/Task4_Building_Kernel_Inage_Script_Uboot_env/env_var_scripts_rpi/: env.txt
Embedded_Linux_Kitchen/Task4_Building_Kernel_Inage_Script_Uboot_env/qemu_boot/: env.sh  uboot.env
Embedded_Linux_Kitchen/Task4_Building_Kernel_Inage_Script_Uboot_env/rpi_boot/: env.sh
Embedded_Linux_Kitchen/Task7_switch_root/: commands_to_chroot.txt
Embedded_Linux_Kitchen/Toolchain_Test/: main
Linux_Admin/: README.md
Linux_Admin/Brightness_Config/: Brightness_Config.md
Linux_Admin/MyOwn_printAli/: MyOwn_printAli.md  printAli  printAli.c  tmp.txt  tmp2.txt
Linux_Admin/MyOwn_printAli/printAli_strOnly/: printAli_str  printAli_str.c
Linux_Admin/Task1_adminLinux/: README.md  mybash.sh
Linux_Admin/Task2_adminLinux/: README.md
Linux_Admin/Task3_adminLinux/: README.md
Linux_Admin/Task4_adminLinux/: README.md  reader
Linux_Admin/Task5_adminLinux/: README.md  supplGroup_lockUsr.sh  userAddToGroup.sh
Linux_Admin/Task6_adminLinux/: README.md
Task1_adminLinux/: Task1_adminLinux.md
Task2_adminLinux/: Task2_adminLinux.md  binarySearch.c  res
Task3_adminLinux/: Task3_adminLinux.md  bc  brightness_config.c  env_script.sh
Task4_adminLinux/: reader.c  writer  writer.c
